--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,8 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0"
+    "eslint": "^8.42.0"
   }
 }
