--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,27 @@
   "scripts": {
     "build": "nest build",
     "start:dev": "nest start --watch",
-    "start:prod": "node dist/main"
+    "start:prod": "node dist/main",
+    "codegen": "npx prisma generate --schema=src/prisma/schema.prisma",
+    "db:up": "docker-compose up -d",
+    "db:down": "docker compose down"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@prisma/client": "^5.10.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.3",
+    "mongodb": "^5.9.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.10.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -27,6 +41,10 @@
     "eslint-config-next": "14.2.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0"
+    "eslint": "^8.42.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/dotenv": "^8.2.0",
+    "axios": "^1.6.8"
   }
 }
