--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "compose-function": "^3.0.3",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.33",
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
